pilot/pkg/security/authz/builder/testdata/http/simple-policy-principal-with-wildcard-out.yaml
name: envoy.filters.http.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
  rules:
    policies:
      ns[foo]-policy[httpbin]-rule[0]:
        permissions:
          - andRules:
              rules:
                - any: true
        principals:
          - andIds:
              ids:
                - orIds:
                    ids:
                      - authenticated:
                          principalName:
                            safeRegex:
                              regex: .+
          - andIds:
              ids:
                - orIds:
                    ids:
                      - authenticated:
                          principalName:
                            safeRegex:
                              regex: spiffe://.*/ns/foo/sa/rule[0]-from[1]-principal[0]
                      - authenticated:
                          principalName:
                            exact: spiffe://td1/ns/foo/sa/rule[0]-from[1]-principal[1]
                      - authenticated:
                          principalName:
                            safeRegex:
                              regex: spiffe://.*bar/ns/foo/sa/rule[0]-from[1]-principal[1]
  shadowRulesStatPrefix: istio_dry_run_allow_
